--- a/www/modules/search/directives/RecallHistory.scss
+++ b/www/modules/search/directives/RecallHistory.scss
@@ -1,6 +1,6 @@
 .search.recall-history {
     svg {
-        min-width: 240px;
-        min-height: 300px;
+        width: 250px;
+        height: 300px;
     }
 }
